cmake_minimum_required(VERSION 2.8)
include(${CMAKE_SOURCE_DIR}/xenonunit.txt)
find_package(Boost 1.54.0 COMPONENTS system filesystem)
if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(loadperf loadperf.cpp)
    target_link_libraries(loadperf xenon)
    target_link_libraries(loadperf ${Boost_LIBRARIES})
endif()
add_executable(toxml  decode.cpp)
target_link_libraries(toxml xenon)
